// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Previously Purchased Products Render PPP Line Item 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
    data-testid="row_MSC-109342"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
          data-testid="product-link"
        >
          <div
            class="MuiBox-root css-1e7tjn7"
          >
            <img
              alt="Product picture"
              class="MuiBox-root css-4w7ia0"
              data-testid="product-image"
              src=""
            />
          </div>
        </a>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-1g35dz1"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
            data-testid="product-mfrName"
          >
            -
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
          >
            <p
              class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
              data-testid="product-name"
            >
              KOHLER MOUNTING BRACKET K-99694-BL
            </p>
          </a>
          <span
            class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
            data-testid="product-mfrNumber"
          >
            MFR# -
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-5oy0h7-MuiTypography-root"
            data-testid="product-unavailable"
          >
            <svg
              class="MuiBox-root css-1ftav34"
              sx="[object Object]"
            >
              info.svg
            </svg>
            Item is no longer available
          </span>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
    >
      <div
        class="MuiGrid-root css-1fof0zu-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
        >
          <div
            class="number-input__container"
          >
            <div
              class="number-input__button-container small"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-down"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="RemoveIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13H5v-2h14v2z"
                  />
                </svg>
              </button>
            </div>
            <input
              class="number-input__input small"
              data-testid="quantity-input"
              min="1"
              value="1"
            />
            <div
              class="number-input__button-container small"
            >
              <button
                class="number-input__button"
                data-testid="quantity-input-up"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="AddIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
        >
          <div
            aria-label=""
            class=""
            data-mui-internal-clone-element="true"
            data-testid="tipDesktop"
          >
            <button
              class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
              data-testid="add-to-cart-button"
              disabled=""
              tabindex="-1"
              type="button"
            >
              Add to Cart
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Previously Purchased Products Renders PPP 1`] = `
<div>
  <div
    class="MuiBox-root css-i3pbo"
  >
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-cnms5y-MuiContainer-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1yupbyh-MuiPaper-root-MuiCard-root"
      >
        <div
          class="MuiBox-root css-1izb3jn"
        />
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-t0051x"
        >
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
            />
          </div>
          <div
            class="MuiBox-root css-uyroru"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-hyt2sh-MuiGrid-root"
              data-testid="row_undefined"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-7 css-1ix6vwg-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 css-15dcrri-MuiGrid-root"
                >
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
                    data-testid="product-link"
                  >
                    <div
                      class="MuiBox-root css-1e7tjn7"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                        style="width: 100%; height: 100%;"
                      />
                    </div>
                  </a>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-9 css-75h7pe-MuiGrid-root"
                >
                  <div
                    class="MuiBox-root css-1g35dz1"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-caption css-jrsdsy-MuiTypography-root"
                      data-testid="product-mfrName"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 100px;"
                      />
                    </span>
                    <a
                      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-28a4g7-MuiTypography-root-MuiLink-root"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-1vcav5x-MuiTypography-root"
                        data-testid="product-name"
                      >
                        <span
                          class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                          style="width: 200px;"
                        />
                      </p>
                    </a>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-rk7jif-MuiTypography-root"
                      data-testid="product-mfrNumber"
                    >
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                      <span
                        class="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-18tyrrx-MuiSkeleton-root"
                        style="width: 120px;"
                      />
                    </span>
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 90px; height: 10px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-grid-xs-6 css-39ac5r-MuiGrid-root"
              >
                <div
                  class="MuiGrid-root css-1fof0zu-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-grid-xs-5 css-5esq3-MuiGrid-root"
                  >
                    <span
                      class="MuiSkeleton-root MuiSkeleton-rectangular MuiSkeleton-pulse css-3x7rqn-MuiSkeleton-root"
                      style="width: 60px; height: 50px;"
                    />
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-1ftzrzh-MuiGrid-root"
                  >
                    <div
                      aria-label=""
                      class=""
                      data-mui-internal-clone-element="true"
                      data-testid="tipDesktop"
                    >
                      <button
                        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root Mui-disabled  css-k1kzc4-MuiButtonBase-root-MuiButton-root"
                        data-testid="add-to-cart-button"
                        disabled=""
                        tabindex="-1"
                        type="button"
                      >
                        Add to Cart
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth css-di86mu-MuiDivider-root"
        />
        <div
          class="MuiBox-root css-1cduj10"
        />
      </div>
    </div>
  </div>
</div>
`;
